<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>comasky</groupId>
    <artifactId>bitcoin-api</artifactId>
    <version>1.2.1-SNAPSHOT</version> <!-- Mise à jour vers un SNAPSHOT pour indiquer un développement continu -->

    <properties>
        <!-- Versions principales de l'environnement -->
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <skipITs>true</skipITs>

        <quarkus.platform.version>3.30.1</quarkus.platform.version>
        <lombok.version>1.18.34</lombok.version>
        <commons-io.version>2.16.1</commons-io.version>

        <frontend-maven-plugin.version>1.15.0</frontend-maven-plugin.version>
        <node.lts.version>v24.11.1</node.lts.version>
        <npm.lts.version>11.6.2</npm.lts.version>

        <compiler-plugin.version>3.14.1</compiler-plugin.version>
        <surefire-plugin.version>3.5.4</surefire-plugin.version>
        <exec-maven-plugin.version>3.3.0</exec-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Quarkus Core & Web -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-client-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-arc</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-rest-qute</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-websockets</artifactId>
        </dependency>
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-scheduler</artifactId>
        </dependency>

        <!-- Utilitaires -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Tests -->
        <dependency>
            <groupId>io.quarkus</groupId>
            <artifactId>quarkus-junit5</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Configuration du Frontend Maven Plugin (pour Node/NPM) -->
            <plugin>
                <groupId>com.github.eirslett</groupId>
                <artifactId>frontend-maven-plugin</artifactId>
                <version>${frontend-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>install node and npm</id>
                        <goals>
                            <goal>install-node-and-npm</goal>
                        </goals>
                        <configuration>
                            <!-- Utilisation de la version Node.js 24 LTS -->
                            <nodeVersion>${node.lts.version}</nodeVersion>
                            <npmVersion>${npm.lts.version}</npmVersion>
                        </configuration>
                    </execution>

                    <execution>
                        <id>npm install</id>
                        <goals>
                            <goal>npm</goal>
                        </goals>
                        <configuration>
                            <arguments>install terser clean-css-cli --save-dev</arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Configuration de l'Exec Maven Plugin (pour minification) -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${exec-maven-plugin.version}</version>
                <executions>

                    <execution>
                        <id>minify-js</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/node_modules/.bin/terser</executable>
                            <arguments>
                                <argument>${project.basedir}/src/main/resources/META-INF/resources/js/dashboard.js</argument>
                                <argument>-o</argument>
                                <argument>${project.build.directory}/classes/META-INF/resources/js/dashboard.js</argument>
                                <argument>--compress</argument>
                                <argument>--mangle</argument>
                            </arguments>
                        </configuration>
                    </execution>

                    <execution>
                        <id>minify-css</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>${project.basedir}/node_modules/.bin/cleancss</executable>
                            <arguments>
                                <argument>${project.basedir}/src/main/resources/META-INF/resources/css/dashboard.css</argument>
                                <argument>-o</argument>
                                <argument>${project.build.directory}/classes/META-INF/resources/css/dashboard.css</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>commons-io</groupId>
                        <artifactId>commons-io</artifactId>
                        <version>${commons-io.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <!-- Configuration du Quarkus Maven Plugin -->
            <plugin>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-maven-plugin</artifactId>
                <version>${quarkus.platform.version}</version>
                <extensions>true</extensions>
                <executions>
                    <execution>
                        <goals>
                            <goal>build</goal>
                            <goal>generate-code</goal>
                            <goal>generate-code-tests</goal>
                            <goal>native-image-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Configuration du Compiler Plugin -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler-plugin.version}</version>
                <configuration>
                    <parameters>true</parameters>
                </configuration>
            </plugin>

            <!-- Configuration des Surefire et Failsafe Plugins -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                    <systemPropertyVariables>
                        <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                        <maven.home>${maven.home}</maven.home>
                    </systemPropertyVariables>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <activation>
                <property>
                    <name>native</name>
                </property>
            </activation>
            <properties>
                <quarkus.package.jar.enabled>false</quarkus.package.jar.enabled>
                <skipITs>true</skipITs>
                <quarkus.native.enabled>true</quarkus.native.enabled>
                <quarkus.container-image.build-context>./</quarkus.container-image.build-context>
                <quarkus.container-image.builder>docker</quarkus.container-image.builder>
                <quarkus.container-image.image>ghcr.io/comassky/${project.artifactId}</quarkus.container-image.image>
                <quarkus.container-image.dockerfile>src/main/docker/Dockerfile.native</quarkus.container-image.dockerfile>
                <quarkus.container-image.tag>native</quarkus.container-image.tag>
                <quarkus.native.native-image-xmx>1g</quarkus.native.native-image-xmx>
            </properties>
        </profile>
    </profiles>
</project>